# earthquake-project

./: .all-contributorsrc  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: data_validation.yml
dags/: create_big_query_dataset.py  expectations.py  extract.py  extract_recent.py  load.py  load_recent.py  set_up_bigquery.py  transform.py  transform_recent.py
dags/referential/: ref_extract.py  ref_load.py
logs/scheduler/: latest
metabase-k8s/: README.md
metabase-k8s/dev/: metabase.yaml
metabase-k8s/infra/: .terraform.lock.hcl  gke.tf  metabase_k8s.tf  terraform.tvars  variables.tf
metabase-k8s/infra/terraform.tfstate.d/test/: terraform.tfstate  terraform.tfstate.backup
notebooks/: playground.ipynb
pubsub-publisher/: Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
scripts/: entrypoint.sh
users/: 10200_random_users.csv  random_users_df_creation.ipynb
