[tool.poetry]
name = "cloud-run-function-pubsub"
version = "0.1.0"
description = ""
authors = ["maximedelobelle <maxime.delobelle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-pubsub = "^2.18.4"
google-cloud-bigquery = "^3.13.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
